# freader

./: .env  .gitignore  Cargo.toml  freader.env  ggrrss.env  rustfmt.toml
migrations/0_init/: down.sql  up.sql
migrations/1_add_items/: up.sql
migrations/2019-08-15-171447_subscriptions/: up.sql
migrations/2019-08-17-133119_subscriptions_add_title/: up.sql
migrations/2019-08-22-110111_add_categories/: down.sql  up.sql
migrations/2020-08-26-105259_subscriptions_add_site_url/: down.sql  up.sql
src/: appdata.rs  auth.rs  config.rs  db.rs  feed_manager.rs  main.rs  models.rs  opml.rs  prelude.rs  schema.rs  updater.rs  utils.rs
src/db/: executor.rs  helper.rs  mod.rs  models.rs  schema.rs
src/reader/: mod.rs  stream.rs  subscription.rs  user_info.rs
src/reader/utils/: id_as_string.rs  mod.rs  require_auth.rs
