[package]
name = "freader"
version = "0.1.0"
authors = ["ThinkChaos <ThinkChaos@users.noreply.github.com>"]
edition = "2018"

[features]
dev = ["listenfd"]

[dependencies]
actix = "0.9.0"
actix-http = "1.0.1"
actix-rt = "1.1.1"
actix-service = "1.0.6"
actix-web = "2.0.0"
diesel = { version = "1.4.5", default-features = false, features = ["sqlite"] }
dotenv = "0.15.0"
env_logger = "0.7.1"
futures = "0.3.5"
listenfd = { version = "0.3.3", optional = true }
log = "0.4.11"
serde = "1.0.115"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
